syntax = "proto3";

package informaticsmatters.protobuf.accountserver;

enum AuthorityResponseEnum {
  AUTHORITY_RESPONSE_ENUM_UNSPECIFIED = 0;
  AUTHORITY_RESPONSE_ENUM_GRANTED = 1;
  AUTHORITY_RESPONSE_ENUM_DENIED = 2;
}

// An Authority Request (and Response) message (originated by a Merchant).
//
// Authority requests are sent by Merchants prior to executing any
// operation that consumes resources required for the User's request.
// For the Data Manager this might be the execution of a Job or storage
// of a Dataset. The AS responds to the request with a GRANT or DENY.
//
// If granted the AS also transmits an 'authorisation code' that the Merchant
// is required to send with any changes associated with the resource.
// The authorisation code is a positive integer in the range 1 .. 2,147,483,647.
//
// The AS may DENY the request, providing a reason.
message MerchantAuthorityRequestResponseMessage {
  // Fields 1..15
  //
  // An ISO8601 UTC string that includes a timezone.
  // Typically something like 2021-12-31T00:00:00.00Z
  string timestamp = 1;

  // The merchant responsible for submitting the authority request.
  string merchant_kind = 2;
  string merchant_name = 3;
  uint32 merchant_id = 4;

  // The merchant's AuthorisableAction.
  // What is being done that requires authority.
  string action_operation = 5;
  string action_value = 6;
  string action_reference_name = 7;
  string action_reference_id = 8;

  // Authority response which includes a code if GRANTED and a reason if DENIED
  AuthorityResponseEnum response = 10;
  uint32 authorisation_code = 11;
  string reason = 12;

  // Fields 16..2047

  // The User, Product (or Unit or Organisation) providing the funds.
  // The User is optional and one of Product or Unit or Organisation
  // will be provided but not necessarily all.
  string user = 16;
  string product = 17;
  string unit = 18;
  string organisation = 19;
}
